# RV32I

./: .gitignore  CMakeLists.txt  README.md  test  test.c  test1.c
.cache/clangd/index/: BitHelpers.cpp.6C94BE77C1B867B3.idx  BitHelpers.hpp.AE73B22357A64138.idx  Debugger.hpp.8C9163A8F59280EF.idx  Decoder.cpp.7874F84916F82D9D.idx  Decoder.hpp.012D4FAB84F0F259.idx  ElfLoader.cpp.939299D461637F28.idx  ElfLoader.hpp.E091B69E7E1C8B6F.idx  Encoder.hpp.0D43DE9C04958FFE.idx  Formats.hpp.5E680237A9103C50.idx  HandlerFactory.hpp.53D16E6E7A39EFF0.idx  InstrInfo.hpp.F23A85428DEACB9C.idx  IntTypes.hpp.D3041F26B7C0D9CB.idx  Interpreter.hpp.BA52B6487BDBF457.idx  InterpreterState.hpp.5A32B82CD4F0E590.idx  Memory.hpp.BFFBF536D132F47D.idx  Opcodes.hpp.CAA84FE1D18D7E14.idx  Opearations.hpp.0C6DE2DA815CBA47.idx  Status.hpp.639FA7B1B2AAD607.idx  Syscall.cpp.1F1DA5742BCB4C21.idx  Syscall.hpp.73AE80C437F6C185.idx  elf_types.hpp.D53E748ACA3E178D.idx  elfio.hpp.31E7B02CC1C89896.idx  elfio_array.hpp.031A7C559108F4FA.idx  elfio_dynamic.hpp.705E96EC80310261.idx  elfio_header.hpp.4B3F83F57BFF2C38.idx  elfio_modinfo.hpp.F48C1DCABEE49BDE.idx  elfio_note.hpp.8FA69A4EF861B968.idx  elfio_relocation.hpp.1328553B3BA8BA75.idx  elfio_section.hpp.89C7DAB374ABE96C.idx  elfio_segment.hpp.5E3E727C8445CCE4.idx  elfio_strings.hpp.775B2AF7059E05BA.idx  elfio_symbols.hpp.ED6C8297DB537824.idx  elfio_utils.hpp.CC6D67FC9F044045.idx  elfio_version.hpp.88CEBCF5A7E45AB2.idx  elfio_versym.hpp.E0E0524CCCF4ABA9.idx  loguru.cpp.95FDF4E77D73CA3F.idx  loguru.hpp.57C2DC10F743CF72.idx  main.cpp.1643D147A7CD2D5F.idx  memory.cc.6A5029C8F7668726.idx  memory.hh.A0F14F3751A6465E.idx  (+1 more)
cmake/: ProjectOptions.cmake
common/: api.h  lib.h
include/: BitHelpers.hpp  ElfLoader.hpp  Encoder.hpp  Formats.hpp  InstrInfo.hpp  IntTypes.hpp  Interpreter.hpp  InterpreterState.hpp  Opcodes.hpp  Operations.hpp  Runner.hpp  Status.hpp  Zbb.hpp
source/: BitHelpers.cpp  Decoder.cpp  ElfLoader.cpp  Handlers.cpp  Runner.cpp  Syscall.cpp  main.cpp
tests/: CMakeLists.txt
tests/e2e/: bubblesort.c  echo.c  fcalc.c  fib.c  isqrt.c
tests/source/: e2e_tests.cpp  test_instruction_f.cpp  test_instructions_i.cpp  test_instructions_m.cpp
